# clima

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  atmosphere.txt  notes.md  settings.yaml  setup.py  species.yaml
.github/workflows/: test.yaml
clima/: __init__.py
clima/cython/: AdiabatClimate.pyx  AdiabatClimate_pxd.pxd  CMakeLists.txt  ClimaRadtranWrk.pyx  ClimaRadtranWrk_pxd.pxd  OpticalProperties.pyx  OpticalProperties_pxd.pxd  RTChannel.pyx  RTChannel_pxd.pxd  Radtran.pyx  Radtran_pxd.pxd  WaterAdiabatClimate.pyx  WaterAdiabatClimate_pxd.pxd  _clima.pyx  futils.pyx  futils_pxd.pxd
clima/fortran/: AdiabatClimate.f90  CMakeLists.txt  ClimaRadtranWrk.f90  OpticalProperties.f90  RTChannel.f90  Radtran.f90  WaterAdiabatClimate.f90  WaterAdiabatClimate_wrapper.f90  clima_c_api.f90  futils.f90  wrapper_utils.f90
data/: rebin_petitRADTRANS_for_clima.ipynb
data/CIA/: CH4-CH4.h5  CO2-CO2.h5  H2-CH4.h5  H2-H2.h5  H2-He.h5  H2O-H2O.h5  H2O-N2.h5  N2-N2.h5  N2-O2.h5  O2-O2.h5  README.md
data/aerosol_xsections/: aerosol_xsections.ipynb
data/kdistributions/: C2H2.h5  C2H4.h5  CH4.h5  CO.h5  CO2.h5  H2O.h5  H2S.h5  HCN.h5  NH3.h5  O2.h5  O3.h5  README.md  bins.h5
data/water_continuum/: MT_CKD.h5
data/xsections/: README.md
examples/: EarlyMars.ipynb  Tutorial_AdiabatClimate.ipynb
src/: CMakeLists.txt  clima.f90  clima_climate.f90  clima_const.f90  clima_eqns.f90  clima_eqns_water.f90  clima_input.f90  clima_ode.f90  clima_ptc.f90  clima_radtran.f90  clima_saturationdata.f90  clima_twostream.f90  clima_types.f90  clima_types_create.f90  clima_useful.f90  clima_version.f90.in
src/adiabat/: clima_adiabat.f90  clima_adiabat_altitude.f90  clima_adiabat_dry.f90  clima_adiabat_general.f90  clima_adiabat_kasting.f90  clima_adiabat_kasting_const.f90  clima_adiabat_nonisothermal.f90  clima_adiabat_rc.f90  clima_adiabat_solve.f90  clima_adiabat_water.f90
src/climate/: clima_climate.f90  clima_climate_integrate.f90  clima_climate_rhs.f90
src/dependencies/: CMakeLists.txt  linear_interpolation_module.F90  mrgrnk_mod.f90
src/radtran/: clima_radtran.f90  clima_radtran_radiate.f90  clima_radtran_twostream.f90  clima_radtran_types.f90  clima_radtran_types_create.f90
src/rc/: clima_rc.f90  clima_rc_adiabat.f90  clima_rc_rhs.f90
templates/AdiabatClimate/: species.yaml
templates/AdiabatClimate/Earth/: settings.yaml
templates/AdiabatClimate/Mars/: Sun_3.8Ga.txt  settings.yaml
templates/EarlyMars/: species.yaml
templates/ModernEarth/: settings.yaml  species.yaml
templates/reducing/: settings.yaml  species.yaml
templates/runaway_greenhouse/: settings.yaml  species.yaml
tests/: CMakeLists.txt  settings_RCE_test.yaml  test_adiabat.f90  test_clima.f90  test_climate.f90  test_kasting.f90  test_radtran.f90  test_rc.f90  validate.f90  validate_earth.f90
